--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: #000;
 
 }
@@ -47,4 +47,12 @@ body{
     border: solid #fff 3px;
     cursor: pointer;
     transition: 1s;
+} */
+
+
+
+div{
+    text-align: center;
+    margin: 90px auto;
+    width: 40%;
 }
