--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-input{
+/* input{
     width: 100%;
     margin-bottom: 2%;
     color:#302f2f;
-}
+    /* border: 3px solid #302f2f; */
+/* }
 
 h3{
     color: #696767;
-}
+} */ 
